# libc-support

./: .gitignore  Makefile  Makefile.am  README.md  README_getent.md  TODO  autogen.sh  configure.ac  getconf.c  getent.c  meson.build
getconf/: README.md  getconf.c
getent/: LICENSE  Makefile  README.md  getent.c
src/: meson.build
src/getconf/: Makefile  getconf.c  getconf.inc  meson.build
src/getent/: Makefile  databases.h  db_aliases.c  db_ethers.c  db_group.c  db_gshadow.c  db_hosts.c  db_initgroups.c  db_netgroup.c  db_networks.c  db_password.c  db_protocols.c  db_rpc.c  db_services.c  db_shadow.c  getent.c  getent.h  getent.inc  meson.build
